@@ -1,3 +1,8 @@
+2007-11-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
+	New selector action: RemoveInterface
+
 2007-09-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/JunOS.pm: Dramatic update by Jon Nistor
